--- a/rent/package.json
+++ b/rent/package.json
@@ -50,6 +50,7 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.542.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
